First attempt at a question: Final 2014 Q2.

--- a/main.tex
+++ b/main.tex
@@ -6,10 +6,14 @@
 
 \title{ECON 480--2 Past Exam Solutions}
 \author{Ahnaf Rafi}
-\date{2022--02--11}
+\date{\today}
 
 \begin{document}
 
 \maketitle
+
+\tableofcontents
+
+\input{2014/final/2014_final.tex}
 
 \end{document}
